--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,6 @@ body {
   font-family: 'Be Vietnam Pro';
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.15;
   color: #212529;
   text-align: left;
   background-color: #fff; }
@@ -2050,7 +2049,7 @@ textarea.form-control {
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
+  padding: 0.5rem 1rem;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
@@ -5288,6 +5287,39 @@ a.close.disabled {
   color: #fff;
   text-align: center; }
 
+.line-down {
+  background-color: #D9D9D9;
+  height: 100px;
+}
+
+.choose-carousel {
+  background: linear-gradient(to right, 
+  rgba(217, 217, 217, 0) 0%,
+  rgba(217, 217, 217, 0) 30%,
+  rgba(217, 217, 217, 1) 40%,
+  rgba(217, 217, 217, 1) 60%,
+  rgba(217, 217, 217, 0) 70%,
+  rgba(217, 217, 217, 0) 100% );
+}
+
+.choose-carousel-1 {
+  background-color: #D9D9D9;
+  padding: 20px 50px;
+  border-top-left-radius: 30px;
+}
+
+.choose-carousel-2 {
+  background-color: #D9D9D9;
+  padding: 20px 50px;
+}
+
+.choose-carousel-3 {
+  background-color: #D9D9D9;
+  padding: 20px 50px;
+  border-top-right-radius: 30px;
+}
+
+
 @-webkit-keyframes spinner-border {
   to {
     -webkit-transform: rotate(360deg);
@@ -8276,6 +8308,7 @@ h1, h2, h3, h4, h5,
     font-family: 'SVN-Harabaras';
     font-size: 70px;
     font-weight: 200;
+    line-height: 1.1;
     color: #fff; }
     @media (max-width: 991.98px) {
       .work .text h2 {
@@ -8330,7 +8363,7 @@ h1, h2, h3, h4, h5,
         -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
         box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2); }
     .thumbnail li.active a img {
-      border: 4px solid #fff;
+      /* border: 4px solid #fff; */
       -webkit-transform: scale(1.1);
       -ms-transform: scale(1.1);
       transform: scale(1.1);
@@ -8621,9 +8654,24 @@ h1, h2, h3, h4, h5,
         .site-mobile-menu .site-nav-wrap[data-class="social"] > li:first-child a {
           padding-left: 15px !important; }
 
+.magenta-logo {
+  background-color: #BC2649;
+  height: 100px;
+  padding: 10px 30px;
+  border-radius: 20px;
+}
+
 .magenta {
   background-color: #BC2649;
   padding: 5% 10% 0;
+}
+
+.magenta-black {
+  background: linear-gradient(to bottom, #BC2649 50%, #1E1E1E 50%);
+}
+
+.black {
+  background-color: #1E1E1E;
 }
 
 .magenta .text h1 {
@@ -8644,6 +8692,16 @@ h1, h2, h3, h4, h5,
   @media (max-width: 991.98px) {
     .magenta .text h2 {
       font-size: 30px; } }
+
+.magenta .text h3 {
+  font-family: 'SVN-Harabaras';
+  font-size: 50px;
+  font-weight: 200;
+  color: #fff; }
+  @media (max-width: 991.98px) {
+    .magenta .text h2 {
+      font-size: 25px; } }
+
 .magenta .text p {
   font-size: 17px;
   color: #fff; }
@@ -8654,4 +8712,10 @@ h1, h2, h3, h4, h5,
 .magenta .text .text-quote {
   line-height: 0.5;
   font-family: 'SFU-HelveticaBlack';
+}
+
+.border-qr {
+  border: 10px white solid;
+  border-radius: 10%;
+  
 }
